# pwm

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTORS  LICENSE  Makefile  README.md  reducer.py
benchmark/src/: construct_wm.cpp  construct_wt.cpp
cmake/: DownloadSTXXL.cmake  FindSDSL.cmake  header_walker.cmake  header_walker_config.json.in  iwyu.cmake  iwyu.imp
cmakemodules/: DownloadGTest.cmake  DownloadGlog.cmake  FindGlog.cmake  FindPythonModule.cmake  find_or_download_package.cmake
include/: CMakeLists.txt  algorithm.hpp  common.hpp  context.hpp  debug.hpp  merge.hpp  pc.hpp  prefix_counting.cpp  prefix_counting.hpp  prefix_sorting.hpp  ps.hpp  wavelet_structures.hpp  wm_cilk_ppc.hpp  wm_dd2_pc.hpp  wm_dd_pc.hpp  wm_dd_ps.hpp  wm_naive.hpp  wm_pc.hpp  wm_pddps.hpp  wm_ppc.hpp  wm_pps.hpp  wm_ps.hpp  wt_dd_pc.hpp  wt_dd_ps.hpp  wt_naive.hpp  wt_pc.hpp  wt_ppc.hpp  wt_pps.hpp  wt_ps.hpp  wx_base.hpp  wx_dd_fe.hpp  wx_dd_pc.hpp  wx_dd_pc_fe.hpp  wx_dd_pc_ss.hpp  wx_dd_ps.hpp  wx_huff_dd_naive.hpp  wx_huff_dd_pc.hpp  wx_huff_dd_pc_ss.hpp  wx_huff_dd_ps.hpp  wx_huff_naive.hpp  (+14 more)
include/arrays/: bit_vectors.hpp  border_hist_array.hpp  flat_two_dim_array.hpp  flat_two_dim_array_external.hpp  helper_array.hpp  memory_modes.hpp  memory_types.hpp  pow2_array.hpp  slice.hpp  span.hpp  stxxl_helper.hpp
include/benchmark/: algorithm.hpp  file_util.hpp  malloc_count.h
include/bit_vector/: bit_vectors.hpp
include/construction/: building_blocks.hpp  ctx_all_levels.hpp  ctx_compute_borders.hpp  ctx_generic.hpp  ctx_huff_all_levels.hpp  ctx_single_level.hpp  ctx_single_level_external.hpp  ctx_sliced_single_level.hpp  merge.hpp  merge_external.hpp  pc.hpp  pc_external.hpp  pc_semi_external.hpp  pc_ss.hpp  ppc.hpp  ppc_ss.hpp  pps.hpp  ps.hpp  ps_external.hpp  ps_semi_external.hpp  wavelet_structure.hpp  wavelet_structure_external.hpp
include/construction/pc_dd_fe/: ctx_partial.hpp  external_dd.hpp  external_merge.hpp  merge_external.hpp  pc_partial.hpp  wx_dd_pc_fe2.hpp
include/external_memory/: ctx_single_level_external.hpp  internal_memory_bound.hpp  stxxl_helper.hpp  wavelet_structure_external.hpp  wx_dd_pc_fe.hpp  wx_pc_ie.hpp  wx_ppc_ie.hpp  wx_ps_fe.hpp  wx_ps_oe.hpp
include/external_memory/full/: ps_external.hpp
include/external_memory/full/dd/: ctx_partial.hpp  external_dd.hpp  external_merge.hpp  pc_partial.hpp
include/external_memory/full/ps/: packed_io.hpp  ps_external.hpp  ps_external_packed.hpp  ps_external_unpacked.hpp
include/external_memory/semi_in/: pc_semi_external.hpp
include/external_memory/semi_out/: inplace_partition.hpp  inplace_ps_semi_external.hpp  ps_semi_external.hpp
include/huffman/: README.md  ctx_huff_all_levels.hpp  ctx_huff_all_levels_borders.hpp  ctx_huffman.hpp  huff_bit_vectors.hpp  huff_border_hist_array.hpp  huff_building_blocks.hpp  huff_codes.hpp  huff_ctx_all_levels.hpp  huff_dd.hpp  huff_decode.hpp  huff_level_sizes_builder.hpp  huff_merge.hpp  huff_naive.hpp  huff_parallel_level_sizes_builder.hpp  huff_pc.hpp  huff_pc_ss.hpp  huff_permutation.hpp  huff_ps.hpp  huff_wx_pc.hpp  huffman_codes.hpp  wx_huff_naive.hpp  wx_huff_pc.hpp
include/queries/: access.hpp  bin_rank_popcnt.hpp  bin_rank_select_popcnt.hpp  bin_select_popcnt.hpp  popcnt_traits.hpp  query_support.hpp
include/util/: alphabet_util.hpp  bit_reverse.hpp  bit_vectors.hpp  border_hist_array.hpp  cacheline.hpp  common.hpp  context.hpp  ctx_all_levels.hpp  ctx_compute_borders.hpp  ctx_single_level.hpp  ctx_single_level_external.hpp  ctx_sliced_single_level.hpp  debug.hpp  debug_assert.hpp  decode.hpp  external_flat_two_dim_array.hpp  file_array.hpp  file_array_reader.hpp  file_stream.hpp  file_util.hpp  filesystem_util.hpp  flat_two_dim_array.hpp  flat_two_dim_array_external.hpp  histogram.hpp  huff_bit_vectors.hpp  huffman_codes.hpp  inplace_partition.hpp  macros.hpp  meminfo.hpp  memory_types.hpp  merge.hpp  pc.hpp  pc_external.hpp  pc_ss.hpp  permutation.hpp  print.hpp  ps.hpp  ps_external.hpp  stats.hpp  structure_decode.hpp  (+4 more)
include/util/uint_t/: IntegerBase.hpp
src/: CMakeLists.txt  alphabet_count.cpp  benchmark.cpp  benchmark_wm.cpp  dd_prefix_counting.cpp  dd_prefix_counting_single_scan.cpp  dd_prefix_sorting.cpp  fastq_extract.cpp  malloc_count.c  naive.cpp  parallel_prefix_counting.cpp  parallel_prefix_counting_single_scan.cpp  parallel_prefix_sorting.cpp  prefix_counting.cpp  prefix_sorting.cpp  sequential_prefix_counting.cpp  sequential_prefix_counting_single_scan.cpp  sequential_prefix_sorting.cpp  wm_pc.cpp
src/register/: dd_prefix_counting.cpp  dd_prefix_counting_single_scan.cpp  dd_prefix_sorting.cpp  external_dd.cpp  external_dd_bench.cpp  external_dd_test.cpp  external_parallel_prefix_counting.cpp  external_prefix_counting.cpp  external_prefix_sorting.cpp  external_sequential_prefix_counting.cpp  external_sequential_prefix_sorting.cpp  huff_dd_naive.cpp  huff_dd_pc.cpp  huff_dd_pc_ss.cpp  huff_dd_ps.cpp  huff_naive.cpp  huff_pc.cpp  huff_pc_ss.cpp  huff_ps.cpp  naive.cpp  parallel_prefix_counting.cpp  parallel_prefix_counting_single_scan.cpp  parallel_prefix_sorting.cpp  sequential_prefix_counting.cpp  sequential_prefix_counting_single_scan.cpp  sequential_prefix_sorting.cpp
test/: .gitignore  CMakeLists.txt  access_tests.cpp  bin_rank_select_tests.cpp  bit_copy.cpp  construction_tests.cpp  external_merge_tests.cpp  file_stream_tests.cpp  huff_codes_tests.cpp  huffman_code_tests.cpp  huffman_codes_test.cpp  ps_ips_tests.cpp  query_support_tests.cpp  test_template.cpp
test/test/: bench_driver.cpp  test_driver.cpp  testsuite.cmake  util.hpp
test/util/: test_driver.cpp  testsuite.cmake
